# webspec

./: BUILD.LINUX.md  LICENSE.md  README.md  TODO.md
client/: index.html
client/img/: style.css
client/js/: webspec.js
client/maps/: cp_gullywash_final1.txt
server/: BUILD.LINUX.md  BUILD.WINDOWS.md  BUILD.md  CMakeLists.txt  webspec.sln  webspec.sp  webspec.vcxproj  webspec.vcxproj.filters
server/lib/: ZLIB.lib  websockets.lib
server/lib/win32/: ZLIB.lib  websockets.lib
server/src/: callbacks.cpp  callbacks.h  definitions.cpp  definitions.h  helpers.cpp  helpers.h  offsets.cpp  offsets.h  vfuncs.cpp  vfuncs.h  webspec-definitions.h  webspec-dumping.h  webspec-helpers.h  webspec-packetCodes.h  webspec-vfuncs.h  webspec.cpp  webspec.h  webspec_plugin.cpp  win32_helpers.h
